clusters/my-cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: default
  # 사용할 인그레스 컨트롤러를 지정하고, rewrite 규칙을 사용하기 위한 어노테이션
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  # myapp.com 이라는 도메인으로 들어오는 요청에 대한 규칙
  # 실제 소유하고 있는 도메인으로 변경해야 합니다.
  - host: 158.180.95.136
    http:
      paths:
        # '/api' 로 시작하는 모든 경로는 백엔드 서비스로 연결합니다.
        # (.*)는 /api/ 뒤에 오는 모든 문자열을 캡처합니다.
        - path: /api(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              # 이전에 만든 백엔드 서비스의 이름을 정확히 기입합니다.
              name: backend-svc
              port:
                number: 80
        
        # 그 외의 모든 경로는 프론트엔드 서비스로 연결합니다.
        - path: /()(.*)
          pathType: Prefix
          backend:
            service:
              # 이전에 만든 프론트엔드 서비스의 이름을 정확히 기입합니다.
              name: frontend-svc
              port:
                number: 80
